--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <div>
                         <label for="ticker" class="block text-sm font-medium text-gray-700">Stock Ticker</label>
                         <div class="mt-1 flex rounded-md shadow-sm">
-                            <input type="text" id="ticker" class="flex-1 block w-full rounded-none rounded-l-md border-gray-300 px-3 py-2 focus:border-blue-500 focus:ring-blue-500" placeholder="e.g., AAPL, 0700.HK">
+                            <input type="text" id="ticker" class="flex-1 block w-full rounded-none rounded-l-md border-gray-300 px-3 py-2 focus:border-blue-500 focus:ring-blue-500" placeholder="e.g. CPRT">
                             <button id="fetch-data-btn" class="inline-flex items-center px-4 py-2 border border-l-0 border-gray-300 bg-gray-50 text-gray-700 rounded-r-md hover:bg-gray-100">Fetch Data</button>
                         </div>
                     </div>
