--- a/index.html
+++ b/index.html
@@ -153,14 +153,18 @@
               "title": "S&P 500 Index"
             },
             {
-              "proName": "FOREXCOM:NSXUSD",
-              "title": "US 100 Cash CFD"
+              "proName": "FX_IDC:CNYUSD",
+              "title": "CNY to USD"
             },
             {
-              "proName": "FX_IDC:EURUSD",
-              "title": "EUR to USD"
+              "proName": "HSI:HSI",
+              "title": "HSI"
             },
-            {
+              {
+              "proName": "HSI:HSCEI",
+              "title": "HSCEI"
+            },
+              {
               "proName": "BITSTAMP:BTCUSD",
               "title": "Bitcoin"
             },
