--- a/index.html
+++ b/index.html
@@ -153,8 +153,12 @@
               "title": "S&P 500 Index"
             },
             {
-              "proName": "FX_IDC:CNYUSD",
+              "proName": "FX_IDC:USDCNY",
               "title": "CNY to USD"
+            },
+            {
+              "proName": "OANDA:XAUUSD",
+              "title": "GOLD"
             },
             {
               "proName": "HSI:HSI",
