--- a/index.html
+++ b/index.html
@@ -153,20 +153,32 @@
               "title": "S&P 500 Index"
             },
             {
-              "proName": "FOREXCOM:NSXUSD",
-              "title": "US 100 Cash CFD"
-            },
-            {
-              "proName": "FX_IDC:EURUSD",
-              "title": "EUR to USD"
-            },
-            {
               "proName": "BITSTAMP:BTCUSD",
               "title": "Bitcoin"
             },
             {
               "proName": "BITSTAMP:ETHUSD",
               "title": "Ethereum"
+            },
+            {
+              "proName": "HSI:HSI",
+              "title": "Hang Seng Index"
+            },
+            {
+              "proName": "HSI:HSCEI",
+              "title": "Hang Seng China Enterprises Index"
+            },
+            {
+              "proName": "FX_IDC:CNYUSD",
+              "title": "CNY to USD"
+            },
+            {
+              "proName": "FX_IDC:USDCNY",
+              "title": "USD to CNY"
+            },
+            {
+              "proName": "OANDA:XAUUSD",
+              "title": "Gold"
             }
           ],
           "showSymbolLogo": true,
